force-app/main/default/objects/Loan_Account__c/Loan_Account__c.object-meta.xml
<CustomObject>
    <description
  >Active loan account created after a Loan Application is approved and disbursed.</description>
    <label>Loan Account</label>
    <nameField>
        <label>Loan Account Number</label>
        <type>AutoNumber</type>
        <displayFormat>LN-{0000000}</displayFormat>
        <startingNumber>1000001</startingNumber>
    </nameField>
    <pluralLabel>Loan Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>