force-app/main/default/objects/Loan_Account__c/fields/Days_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Days_Past_Due__c</fullName>
    <label>Days Past Due</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>