force-app/main/default/objects/Loan_Account__c/fields/Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application__c</fullName>
    <label>Loan Application</label>
    <referenceTo>Loan_Application__c</referenceTo>
    <relationshipLabel>Loan Accounts</relationshipLabel>
    <relationshipName>Loan_Accounts</relationshipName>
    <type>MasterDetail</type>
</CustomField>