force-app/main/default/objects/Loan_Account__c/fields/Total_Payments_Made__c.field-meta.xml
<CustomField>
    <fullName>Total_Payments_Made__c</fullName>
    <label>Total Payments Made</label>
    <precision>18</precision>
    <scale>2</scale>
    <summarizedField>Payment_Transaction__c.Amount__c</summarizedField>
    <summaryForeignKey>Payment_Transaction__c.Loan_Account__c</summaryForeignKey>
    <summaryOperation>SUM</summaryOperation>
    <type>Summary</type>
</CustomField>